@@ -1,3 +1,12 @@
+Wed Jan 17 11:04:58 1996  Roland McGrath  <roland@churchy.gnu.ai.mit.edu>
+
+	* sysdeps/unix/sysv/time.S: Moved from sysv4.
+	* sysdeps/unix/sysv/irix4/time.S: File removed.
+
+	* sysdeps/unix/sysv/linux/signum.h: Moved from
+	sysdeps/unix/sysv/linux/i386.
+	(_NSIG): Move inside #ifdef _SIGNAL_H.
+
 Tue Jan 16 17:37:39 1996  Roland McGrath  <roland@churchy.gnu.ai.mit.edu>
 
 	* sysdeps/unix/seekdir.c: Don't modify POS before seeking.
